# SocksDirect

./: .gitignore  CMakeLists.txt  README.md  launch.sh
common/: .interprocess_t_n.hpp.swp  __deprecated_attachqueue.h  adjlist_t.hpp  attachqueue.h  darray.hpp  helper.c  helper.h  interprocess_buffer.cpp  interprocess_buffer.h  interprocess_t.cpp  interprocess_t.h  interprocess_t_n.cpp  interprocess_t_n.hpp  locklessq_v2.cpp  locklessq_v2.h  locklessq_v2.hpp  locklessq_v2_rdma.hpp  locklessq_v3.hpp  locklessqueue_n.hpp  metaqueue.c  metaqueue.cpp  metaqueue.h  rdma.cpp  rdma.h  rdma_interprocess_t.cpp  rdma_locklessqueue_n.hpp  rdma_struct.h  setup_sock.h  socket.h  util.c  util.h
data/libvma/latency/inter/: test_diffmsgsize_inter.sh
data/libvma/latency/intra/: test_diffmsgsize_intra.sh
data/libvma/throughput/inter/diffcorenum/: test_diffmsgsize_inter.sh
data/libvma/throughput/inter/diffmsgsize/: test_diffmsgsize_inter.sh
data/libvma/throughput/intra/diffmsgsize/: test_diffmsgsize_intra.sh
data/linux/latency/intra/: test_diffmsgsize_intra.sh
data/linux/throughput/inter/diffcorenum/: test_diffmsgsize_inter.sh
data/linux/throughput/inter/diffmsgsize/: test_diffmsgsize_inter.sh
data/linux/throughput/intra/diffcorenum/: test_diffcorenum_intra.sh
data/linux/throughput/intra/diffmsgsize/: test_diffmsgsize_intra.sh
data/rsocket/latency/inter/: process.sh  test_diffmsgsize_inter.sh
data/rsocket/latency/intra/: test_diffmsgsize_intra.sh
data/rsocket/throughput/inter/diffcorenum/: test_diffmsgsize_inter.sh
data/rsocket/throughput/inter/diffmsgsize/: test_diffmsgsize_inter.sh
data/rsocket/throughput/intra/diffcorenum/: test_diffmsgsize_intra.sh
data/rsocket/throughput/intra/diffmsgsize/: test_diffmsgsize_intra.sh
data/socksdirect/latency/inter-copy/: test_diffmsgsize_inter.sh
data/socksdirect/latency/inter-zerocopy/: process.sh  test_diffmsgsize_inter.sh
data/socksdirect/latency/intra/: test_diffmsgsize_intra.sh
data/socksdirect/setup/: eval-setup.sh
data/socksdirect/throughput/inter/diffcorenum/: test_diffcorenum_inter.sh
data/socksdirect/throughput/inter/diffmsgsize/: test_diffmsgsize_inter.sh
data/socksdirect/throughput/intra/diffconnnum/: test_diffmsgsize_intra.sh
data/socksdirect/throughput/intra/diffcorenum/: test_diffcorenum_intra.sh  test_diffmsgsize_intra.sh
data/socksdirect/throughput/intra/diffmsgsize/: test_diffmsgsize_intra.sh
demo/: bench.sh  demo.sh  kill_services.sh  nginx.conf  runserver.sh  start_memcached.sh  start_monitor.sh  start_nginx.sh  start_web_service.sh
demo/html/: index.html
demo/html/data/: cpu.txt
lib/: __deprecated_attachqueue_lib.c  __deprecated_attachqueue_lib.h  attachqueue_lib.c  attachqueue_lib.h  file_lib.cpp  fork.cpp  fork.h  lib.c  lib.cpp  lib.h  lib_internal.h  poll_lib.cpp  pot_socket_lib.cpp  pot_socket_lib.h  rdma.cpp  rdma.h  rdma_lib.cpp  rdma_lib.h  setup_sock_lib.c  setup_sock_lib.cpp  setup_sock_lib.h  socket_lib.cpp  socket_lib.h  zerocopy.h
monitor/: __deprecated_attachqueue_monitor.c  __deprecated_attachqueue_monitor.h  attachqueue_monitor.c  attachqueue_monitor.h  main.c  main.cpp  process.c  process.cpp  process.h  rdma.cpp  rdma.h  rdma_monitor.cpp  rdma_monitor.h  setup_sock_monitor.c  setup_sock_monitor.cpp  setup_sock_monitor.h  sock_monitor.cpp  sock_monitor.h
pot/: eval_create_c.c  eval_create_c_m.cpp  eval_create_s.cpp  eval_fork_s.cpp  eval_lat_c.c  eval_lat_s.cpp  eval_linux_create_c.c  eval_linux_create_s.cpp  eval_linux_lat_c.c  eval_linux_lat_s.cpp  eval_linux_tput_c.c  eval_linux_tput_diffconnnum_c.c  eval_linux_tput_diffconnnum_s.cpp  eval_linux_tput_s.cpp  eval_rdma_lat_c.c  eval_rdma_lat_s.cpp  eval_rdma_tput_c.c  eval_rdma_tput_diffconnnum_c.c  eval_rdma_tput_diffconnnum_s.cpp  eval_rdma_tput_s.cpp  eval_tput_c.c  eval_tput_diffconnnum_c.c  eval_tput_diffconnnum_s.cpp  eval_tput_s.cpp  testn.sh
rdma/: hrd.h  hrd_conn.cc  hrd_util.cc  latency-client.sh  latency-server.sh  latency.cpp  throughput-client.sh  throughput-server.sh  throughput.cpp
test/: demo_cpu_util.c  demo_http_bench.c  demo_web_service.c  lat_sock_onetime_client.c  lat_sock_onetime_server.cpp  libnewipc.c  test_adjlist.cpp  test_attach.c  test_attach_old.c  test_daary.cpp  test_epoll_client.c  test_epoll_server.c  test_epoll_thr_server.c  test_fork.c  test_fork_client.c  test_fork_client_2.c  test_fork_server.c  test_fork_server_2.c  test_http_client.c  test_interprocess_t.cpp  test_locklessq_v2.cpp  test_locklessq_v3.cpp  test_locklessqueue_n.cpp  test_memcached_client.c  test_metaqueue.c  test_pthread.c  test_sock_client.c  test_sock_client_2.c  test_sock_client_3.c  test_sock_pingpong_client.cpp  test_sock_pingpong_server.cpp  test_sock_server.c  test_sock_server.cpp  test_sock_server_2.cpp  test_sock_server_3.cpp  test_socket.c
zerocopy/: zerocopy.c
zerocopy/linux/arch/x86/entry/syscalls/: syscall_64.tbl
zerocopy/linux/include/linux/: syscalls.h
zerocopy/linux/include/uapi/asm-generic/: unistd.h
zerocopy/linux/kernel/: sys_ni.c
zerocopy/linux/mm/: Makefile  socksdirect.c
