cmake_minimum_required(VERSION 3.8)
project(ipc_direct)
set(CMAKE_CXX_STANDARD 11)
if (COMMAND cmake_policy)
    cmake_policy(SET CMP0003 NEW)
endif (COMMAND cmake_policy)
add_library(ipc SHARED common/helper.c common/metaqueue.cpp lib/setup_sock_lib.cpp lib/socket_lib.cpp lib/lib.cpp common/interprocess_t.cpp
        lib/lib_internal.h common/setup_sock.h common/darray.hpp)
target_link_libraries(ipc dl pthread tcmalloc)
add_executable(monitor common/helper.c common/metaqueue.cpp monitor/setup_sock_monitor.c monitor/process.cpp monitor/sock_monitor.cpp
        monitor/main.cpp common/interprocess_t.cpp common/setup_sock.h common/locklessqueue_n.hpp)
target_link_libraries(monitor pthread tcmalloc)
add_executable(test_attach test/test_attach.c)
add_executable(test_attach_old test/test_attach_old.c)
target_link_libraries(test_attach ipc)
add_executable(test_metaqueue common/metaqueue.cpp common/helper.c test/test_metaqueue.c)
target_link_libraries(test_metaqueue pthread)
add_executable(test_fork test/test_fork.c)
target_link_libraries(test_fork ipc)
add_executable(test_pthread test/test_pthread.c)
target_link_libraries(test_pthread ipc tcmalloc pthread)
add_executable(test_socket test/test_socket.c)
target_link_libraries(test_socket ipc)
add_executable(test_sock_server test/test_sock_server.cpp)
add_executable(test_sock_client test/test_sock_client.c)
target_link_libraries(test_sock_server ipc)
target_link_libraries(test_sock_client ipc)
add_executable(test_interprocess_t test/test_interprocess_t.cpp common/interprocess_t.cpp common/helper.c)
target_link_libraries(test_interprocess_t pthread)
add_executable(test_darray test/test_daary.cpp common/darray.hpp)
add_executable(test_epoll_server test/test_epoll_server.c)
add_executable(test_epoll_client test/test_epoll_client.c)
add_executable(test_sock_server_2 test/test_sock_server_2.cpp)
target_link_libraries(test_sock_server_2 ipc)
add_executable(test_sock_client_2 test/test_sock_client_2.c)
target_link_libraries(test_sock_client_2 ipc)
add_executable(test_sock_server_3 test/test_sock_server_3.cpp)
target_link_libraries(test_sock_server_3 ipc)
add_executable(test_sock_client_3 test/test_sock_client_3.c)
target_link_libraries(test_sock_client_3 ipc)
add_executable(demo_cpu_util test/demo_cpu_util.c common/util.c)
add_executable(demo_web_service test/demo_web_service.c)
target_link_libraries(demo_web_service memcached pthread)
add_library(newipc SHARED test/libnewipc.c)
target_link_libraries(newipc dl pthread)
