cmake_minimum_required(VERSION 3.5)
project(ipc_direct)
set(CMAKE_CXX_STANDARD 11)
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra")
if (COMMAND cmake_policy)
    cmake_policy(SET CMP0003 NEW)
endif (COMMAND cmake_policy)
add_library(ipc SHARED common/helper.c lib/setup_sock_lib.cpp lib/socket_lib.cpp lib/lib.cpp common/interprocess_t.cpp
        lib/lib_internal.h common/setup_sock.h common/darray.hpp common/locklessqueue_n.hpp lib/fork.cpp lib/pot_socket_lib.cpp lib/pot_socket_lib.h)
target_link_libraries(ipc dl pthread tcmalloc)
add_executable(monitor common/helper.c monitor/setup_sock_monitor.cpp monitor/process.cpp monitor/sock_monitor.cpp
        monitor/main.cpp common/interprocess_t.cpp common/setup_sock.h common/locklessqueue_n.hpp common/adjlist_t.hpp
        common/metaqueue.h)
target_link_libraries(monitor pthread tcmalloc)
#add_executable(test_attach test/test_attach.c)
#add_executable(test_attach_old test/test_attach_old.c)
#target_link_libraries(test_attach ipc)
#add_executable(test_metaqueue common/helper.c test/test_metaqueue.c)
#target_link_libraries(test_metaqueue pthread)
# add_executable(test_fork test/test_fork.c)
# target_link_libraries(test_fork ipc)
# add_executable(test_pthread test/test_pthread.c)
# target_link_libraries(test_pthread ipc tcmalloc pthread)
add_executable(test_socket test/test_socket.c)
target_link_libraries(test_socket ipc)
add_executable(test_sock_server test/test_sock_server.cpp)
add_executable(test_sock_client test/test_sock_client.c)
target_link_libraries(test_sock_server ipc)
target_link_libraries(test_sock_client ipc)
add_executable(test_interprocess_t test/test_interprocess_t.cpp common/interprocess_t.cpp common/helper.c)
target_link_libraries(test_interprocess_t pthread)
add_executable(test_darray test/test_daary.cpp common/darray.hpp)
add_executable(test_epoll_server test/test_epoll_server.c)
add_executable(test_epoll_client test/test_epoll_client.c)
add_executable(test_sock_server_2 test/test_sock_server_2.cpp)
target_link_libraries(test_sock_server_2 ipc)
add_executable(test_sock_client_2 test/test_sock_client_2.c)
target_link_libraries(test_sock_client_2 ipc)
add_executable(test_sock_server_3 test/test_sock_server_3.cpp)
target_link_libraries(test_sock_server_3 ipc)
add_executable(test_sock_client_3 test/test_sock_client_3.c)
target_link_libraries(test_sock_client_3 ipc)
add_executable(lat_sock_onetime_client test/lat_sock_onetime_client.c)
target_link_libraries(lat_sock_onetime_client ipc)
add_executable(lat_sock_onetime_server test/lat_sock_onetime_server.cpp)
target_link_libraries(lat_sock_onetime_server ipc)
add_executable(demo_cpu_util test/demo_cpu_util.c common/util.c)
add_executable(test_locklessqueue_n test/test_locklessqueue_n.cpp common/helper.c)
target_link_libraries(test_locklessqueue_n pthread)
add_executable(test_adjlist test/test_adjlist.cpp)
add_executable(test_fork_client test/test_fork_client.c)
target_link_libraries(test_fork_client ipc)
add_executable(test_fork_server test/test_fork_server.c)
target_link_libraries(test_fork_server ipc)
add_executable(test_fork_client_2 test/test_fork_client_2.c)
target_link_libraries(test_fork_client_2 ipc)
add_executable(test_fork_server_2 test/test_fork_server_2.c)
target_link_libraries(test_fork_server_2 ipc)
add_executable(pot_eval_lat_s pot/eval_lat_s.cpp)
target_link_libraries(pot_eval_lat_s ipc)
add_executable(pot_eval_lat_c pot/eval_lat_c.c)
target_link_libraries(pot_eval_lat_c ipc)
add_executable(pot_eval_linux_lat_s pot/eval_linux_lat_s.cpp common/helper.c common/helper.h)
add_executable(pot_eval_linux_lat_c pot/eval_linux_lat_c.c common/helper.c common/helper.h)
target_link_libraries(pot_eval_linux_lat_c pthread)
target_link_libraries(pot_eval_linux_lat_s pthread)
add_executable(pot_eval_linux_tput_s pot/eval_linux_tput_s.cpp common/helper.c common/helper.h)
add_executable(pot_eval_linux_tput_c pot/eval_linux_tput_c.c common/helper.c common/helper.h)
target_link_libraries(pot_eval_linux_tput_s pthread)
target_link_libraries(pot_eval_linux_tput_c pthread)
add_executable(pot_eval_linux_create_s pot/eval_linux_create_s.cpp common/helper.c common/helper.h)
add_executable(pot_eval_linux_create_c pot/eval_linux_create_c.c common/helper.c common/helper.h)
target_link_libraries(pot_eval_linux_create_s pthread)
target_link_libraries(pot_eval_linux_create_c pthread)



